get last image
